frontend/gke/genomics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genomics-ui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: genomics-ui
  template:
    metadata:
      labels:
        app: genomics-ui
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: genomics-n2d-pool
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "genomics"
          effect: "NoSchedule"
      containers:
        - name: genomics-ui
          image: ${GOOGLE_CLOUD_LOCATION}-docker.pkg.dev/${GOOGLE_CLOUD_PROJECT}/prod/genomics-ui:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 300
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: genomics-ui-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    cloud.google.com/backend-config: '{"default": "genomics-backend-config"}'
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: genomics-ui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genomics-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "my-global-static-ip"
    networking.gke.io/managed-certificates: "genomics-managed-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: "gce"
  rules:
    - host: ${NEXT_PUBLIC_APP_HOST_AND_PORT}
      http:
        paths:
          # Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: genomics-agent-service
                port:
                  number: 8080
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genomics-ui-service
                port:
                  number: 3000
